force-app/main/default/objects/ServiceAppointment/fields/I_ST_Appointment_Booking_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Appointment_Booking_Base_URL__c</fullName>
    <formula>$Setup.I_ST_Scheduler__c.I_ST_Modify_Appointment_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Booking Base URL</label>
    <type>Text</type>
</CustomField>