force-app/main/default/objects/ServiceAppointment/fields/I_ST_Campus_Interest__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Campus_Interest__c</fullName>
    <label>Campus Interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_ST_Study_Level__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albury-Wodonga</fullName>
            </value>
            <value>
                <fullName>Bendigo</fullName>
            </value>
            <value>
                <fullName>City Campus</fullName>
            </value>
            <value>
                <fullName>Melbourne (Bundoora)</fullName>
            </value>
            <value>
                <fullName>Mildura</fullName>
            </value>
            <value>
                <fullName>Shepparton</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Berwick (Chisholm Institute)</fullName>
                <isActive>false</isActive>
                <label>Berwick (Chisholm Institute)</label>
            </value>
            <value>
                <fullName>Brunswick (Bouverie)</fullName>
                <isActive>false</isActive>
                <label>Brunswick (Bouverie)</label>
            </value>
            <value>
                <fullName>Bundoora (Latrobe College)</fullName>
                <isActive>false</isActive>
                <label>Bundoora (Latrobe College)</label>
            </value>
            <value>
                <fullName>Carlton (Carlton College Sport)</fullName>
                <isActive>false</isActive>
                <label>Carlton (Carlton College Sport)</label>
            </value>
            <value>
                <fullName>Chisholm311 (Chisholm Institute)</fullName>
                <isActive>false</isActive>
                <label>Chisholm311 (Chisholm Institute)</label>
            </value>
            <value>
                <fullName>Dandenong (Chisholm Institute)</fullName>
                <isActive>false</isActive>
                <label>Dandenong (Chisholm Institute)</label>
            </value>
            <value>
                <fullName>Distance Education</fullName>
                <isActive>false</isActive>
                <label>Distance Education</label>
            </value>
            <value>
                <fullName>Epping (Melbourne Polytechnic)</fullName>
                <isActive>false</isActive>
                <label>Epping (Melbourne Polytechnic)</label>
            </value>
            <value>
                <fullName>Frankston (Chisholm Institute)</fullName>
                <isActive>false</isActive>
                <label>Frankston (Chisholm Institute)</label>
            </value>
            <value>
                <fullName>Myrtleford (Alpine Health)</fullName>
                <isActive>false</isActive>
                <label>Myrtleford (Alpine Health)</label>
            </value>
            <value>
                <fullName>Online (Didasko)</fullName>
                <isActive>false</isActive>
                <label>Online (Didasko)</label>
            </value>
            <value>
                <fullName>Online (OUA)</fullName>
                <isActive>false</isActive>
                <label>Online (OUA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>