force-app/main/default/objects/ServiceAppointment/fields/I_ST_Case__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>