force-app/main/default/objects/ServiceAppointment/fields/I_ST_Consultation_Change_To_Be_Sent__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Consultation_Change_To_Be_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicate whether a consultation change email needs to be sent for this consultation in the batch</description>
    <label>Consultation Change To Be Sent</label>
    <type>Checkbox</type>
</CustomField>