force-app/main/default/objects/ServiceAppointment/fields/I_ST_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created to display related list of service appointment on contact layout</description>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>