force-app/main/default/objects/ServiceAppointment/fields/I_ST_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact_First_Name__c</fullName>
    <formula>Contact.FirstName</formula>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>