force-app/main/default/objects/ServiceAppointment/fields/I_ST_Encrypted_Id__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Encrypted_Id__c</fullName>
    <label>Encrypted Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>