force-app/main/default/objects/ServiceAppointment/fields/I_ST_Enquirer_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Enquirer_Type__c</fullName>
    <label>Enquirer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_ST_Study_Level__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Enquirer_Type</valueSetName>
    </valueSet>
</CustomField>