force-app/main/default/objects/ServiceAppointment/fields/I_ST_Rescheduled_Count__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Rescheduled_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rescheduled Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>