force-app/main/default/objects/ServiceAppointment/fields/I_ST_Study_Level__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Study_Level__c</fullName>
    <label>Study Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Study_Level</valueSetName>
    </valueSet>
</CustomField>