force-app/main/default/objects/ServiceAppointment/listViews/I_ST_Upcoming_Consultations.listView-meta.xml
<ListView>
    <fullName>I_ST_Upcoming_Consultations</fullName>
    <columns>Name</columns>
    <columns>I_ST_Contact__c</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Subject</columns>
    <columns>WorkType</columns>
    <columns>I_ST_Enquirer_Type__c</columns>
    <columns>Status</columns>
    <columns>I_ST_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Consultations</label>
</ListView>